--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       text-align: center;
     }
     .chart-container {
-      width: 500px;
+      width: 450px;
       margin: 40px auto;
     }
     
@@ -35,7 +35,8 @@
       box-sizing: border-box;
       font-size: 16px;
       font-weight: normal;
-      width: 600px;
+      width: 450px;
+      height: 600px;
     }
     legend {
       font-weight: bold;
